--- a/credentials.cfg
+++ b/credentials.cfg
@@ -1,10 +1,10 @@
 [S3]
-AWS_ACCESS_KEY_ID=AKIA5K6O6BSGOOICLMEF
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
 
 [DB]
-HOST=127.0.0.1
-PORT=5432
-DATABASE=anime
-USER=convaiuser00
-PASSWORD=convaiuser007
+HOST=
+PORT=
+DATABASE=
+USER=
+PASSWORD=
